--- a/app/index.html
+++ b/app/index.html
@@ -16,10 +16,16 @@
   <!-- endbuild -->
 
 </head>
-<body>
+<body class="bg-dark">
 
   <div class="container pv-100">
-    <h1 class="text-center">Hello World</h1>
+    <div class="row">
+      <div class="col-6 offset-3">
+        <h1 class="color-warning mb-15">Hello World</h1>
+        <p class="color-gray-300">Foxes are cute and fluffy and they are the best animals in the world.</p>
+        <p class="color-gray-300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
+      </div>
+    </div>
   </div>
 
   <!-- build:js scripts/vendor.js -->
